# bot-ui

./: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: app.py
